Implementazione pagina Log azioni Rasa.

--- a/GuiRasa/Pages/_Host.cshtml
+++ b/GuiRasa/Pages/_Host.cshtml
@@ -33,6 +33,7 @@
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
 
+    <script src="js/custom.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
